# github-copilot-workshop

./: .gitignore  CLAUDE.md  README.md  generate_slides.py  pyproject.toml  slides.pptx
.claude/skills/: README.md
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test-coverage/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: planner.agent.md  reviewer.agent.md
.github/chatmodes/: planner.chatmode.md  reviewer.chatmode.md
.github/instructions/: routers.instructions.md  tests.instructions.md
.github/prompts/: add-endpoint.prompt.md  changelog.prompt.md  debug.prompt.md  review.prompt.md  test-coverage.prompt.md
.github/workflows/: copilot-setup-steps.yml
exercises/: 01-getting-started.md  02-custom-instructions.md  03-settings-and-permissions.md  04-agent-mode.md  05-prompt-files.md  06-chat-modes.md  06-custom-agents.md  07-hooks.md  07-mcp-servers.md  08-context-management.md  08-mcp-servers.md  09-context-management.md  09-real-world-workflow.md  10-hooks.md  10-real-world-workflow.md
src/taskflow/: __init__.py  database.py  main.py  models.py  utils.py
src/taskflow/routers/: tasks.py  users.py
tests/: conftest.py  test_models.py  test_tasks.py  test_utils.py
